--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 3031",
-    "build": "ng build --prod --base-href /gtmanger/",
+    "build": "ng build --prod --base-href /gtmanger3/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
